@startuml
class registrationserver.restapi.RestApi {
}
class registrationserver.modules.device_actor.DeviceBaseActor {
  _config: dict
  _file: <module 'flask.json' from '/usr/lib/python3.9/site-packages/flask/json/__init__.py'>
}
class registrationserver.modules.rfc2217.rfc2217_actor.Rfc2217Actor {
  _Rfc2217Actor__port_ident: str
  _Rfc2217Actor__port: serial.rfc2217.Serial
}
class registrationserver.modules.rfc2217.mdns_listener.MdnsListener {
  _MdnsListener__zeroconf: zeroconf.Zeroconf
  _MdnsListener__dev_folder: str
  _MdnsListener__type: str
}
class registrationserver.redirect_actor.RedirectorActor {
  _sock: <module 'socket' from '/usr/lib/python3.9/socket.py'>
  _sockclient: SockInfo
  _device: <module 'registrationserver.modules.device_actor' from '/home/strey/Projekte/src-registrationserver2/src/registrationserver/modules/device_actor.py'>
}
class registrationserver.redirect_actor.SockInfo {
  address: str
  port: int
}
class registrationserver.redirect_actor.SocketClient {
  client_socket: <module 'socket' from '/usr/lib/python3.9/socket.py'>
  client_address: SockInfo
}
registrationserver.modules.device_actor.DeviceBaseActor <|-- registrationserver.modules.rfc2217.rfc2217_actor.Rfc2217Actor
registrationserver.redirect_actor.RedirectorActor *-- registrationserver.redirect_actor.SockInfo
registrationserver.redirect_actor.SocketClient *-- registrationserver.redirect_actor.SockInfo
@enduml
